--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="theme-color" content="#000000">
 	<title>React App</title>
 	<link href="static/css/main.fc29fa77.css" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 <body>
 	<div id="root"></div>
